# hel-colored

./: Cargo.toml  README.md  TODO
benches/: compare.rs
src/: builder.rs  colors.rs  lib.rs
src/ansi/: consts.rs  mod.rs  string.rs  utils.rs
src/ansi/colors/: color.rs  colored.rs  mod.rs
src/ansi/styles/: bits.rs  mod.rs  style.rs  styled.rs  values.rs
tests/: nested_ansi.rs  primal.rs
