[package]
name = "hel-colored"
authors = ["Hellaeh <me@hellaeh.com>"]
version = "0.5.1"
edition = "2021"
description = "ANSI string colorizer and styler"
license = "GPL-3.0"
repository = "https://github.com/Hellaeh/hel-colored.git"
keywords = ["color", "ansi", "style", "string"]
documentation = "https://docs.rs/hel-colored"
readme = "README.md"

[dev-dependencies]
colored = "2.0.0"

[features]
nested = []