[package]
name = "hel-colored"
authors = ["Hellaeh <me@hellaeh.com>"]
version = "0.6.2"
edition = "2021"
description = "ANSI string colorizer and styler"
license = "GPL-3.0"
repository = "https://github.com/Hellaeh/hel-colored.git"
keywords = ["color", "ansi", "style", "string"]
documentation = "https://docs.rs/hel-colored"
readme = "README.md"

[features]
nested = []

[dev-dependencies]
colored = "3.0.0"
